chore: add owasp zap install guide